WIP revising notes

--- a/reverse_integer.ipynb
+++ b/reverse_integer.ipynb
@@ -4,47 +4,106 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "reverse the integer (without turning it into character)"
+    "reverse the integer (without turning it into string)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
     "def reverse(x):\n",
-    "    "
+    "    i = 0\n",
+    "    ans = 0\n",
+    "    while x > 0:\n",
+    "        digit = x % 10 \n",
+    "        x = round(x/10)\n",
+    "        ans += digit * (10**i)\n",
+    "        i += 1\n",
+    "    \n",
+    "    return ans"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(reverse(123)) #321\n",
-    "print(reverse(-302)) #-203\n",
-    "print(reverse(0432)) # 234\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0b100111000\n",
-      "0b11010101\n"
+      "123\n",
+      "120\n",
+      "0\n"
      ]
     }
    ],
    "source": [
-    "print(bin(312))\n",
-    "print(bin(213))"
+    "print(reverse(123)) #321\n",
+    "print(reverse(120)) # 21\n",
+    "print(reverse(-302)) #-203\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "312 % 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-31"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "round(-312 /10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "312 >> 9"
    ]
   },
   {
